--- a/application/excel/view/import/createTemplateSecond.html
+++ b/application/excel/view/import/createTemplateSecond.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="__IMG__weixin.jpg">
 
-    <title>Bootstrap</title>
+    <title>完善模板信息</title>
 
     <!-- Bootstrap core CSS -->
     <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
@@ -42,6 +42,93 @@
         .form-inline {
             margin-top: 10px;
         }
+
+        .select {
+            display: inline-block;
+            width: auto;
+            height: 40px;
+            position: relative;
+            vertical-align: middle;
+            padding: 0;
+            overflow: hidden;
+            background-color: #fff;
+            color: #555;
+            border: 1px solid #aaa;
+            text-shadow: none;
+            border-radius: 4px;
+            transition: box-shadow 0.25s ease;
+            z-index: 2;
+        }
+
+        .select:hover {
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+        }
+
+        .select:before {
+            content: "";
+            position: absolute;
+            width: 0;
+            height: 0;
+            border: 10px solid transparent;
+            border-top-color: #ccc;
+            top: 14px;
+            right: 10px;
+            cursor: pointer;
+            z-index: -2;
+        }
+
+        .select select {
+            cursor: pointer;
+            padding: 10px;
+            width: 100%;
+            border: none;
+            background: transparent;
+            background-image: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+        }
+
+        .select select:focus {
+            outline: none;
+        }
+
+        label {
+            margin: 10px;
+        }
+
+        .a-radio {
+            display: none;
+        }
+
+        .b-radio {
+            display: inline-block;
+            border: 1px solid #ccc;
+            width: 16px;
+            height: 16px;
+            border-radius: 2px;
+            vertical-align: middle;
+            margin-right: 5px;
+            position: relative;
+        }
+
+        .b-radio:before {
+            content: '';
+            font-size: 0;
+            width: 10px;
+            height: 10px;
+            background: rgb(143, 188, 238);
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin-left: -5px;
+            margin-top: -5px;
+            border-radius: 2px;
+            display: none;
+        }
+
+        .a-radio:checked~.b-radio:before {
+            display: block;
+        }
     </style>
 </head>
 
@@ -51,11 +138,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="#">MySite</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
@@ -82,7 +170,8 @@
                         <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 编写方式</a>
                     </li>
                     <li role="tab" class="second current" aria-disabled="false" aria-selected="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current step: </span><span class="number">2</span> 编写方式</a>
+                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current
+                                step: </span><span class="number">2</span> 编写方式</a>
                     </li>
                     <li role="tab" class="disabled last" aria-disabled="true">
                         <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
@@ -96,76 +185,117 @@
                         <tbody>
                             {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)==0}
                             <tr>
-                                <td><label for="{$option.ocontent}" class="col-sm-10 control-label">{$option.ocontent}</label></td>
+                                <td><label for="{$option.ocontent}"
+                                        class="col-sm-10 control-label">{$option.ocontent}</label></td>
                                 <td><input type="text" class="form-control" name="{$option.idInTable}"></td>
                                 {/if}
                             </tr>{/volist}
                             <!-- 输出select -->
                             {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)>0}
                             <tr>
-                                <td><label for="{$option.ocontent}" class="col-sm-10 control-label">{$option.ocontent}</label></td>
+                                <td><label for="{$option.ocontent}"
+                                        class="col-sm-10 control-label">{$option.ocontent}</label></td>
                                 <td><select class="form-control">
-                                {volist name="option.child" id="vo"}
-                                <option name="{$option.idInTable}" >{$vo.ocontent}</option>
-                                {/volist}
-                                </select></td>
+                                        {volist name="option.child" id="vo"}
+                                        <option name="{$option.idInTable}">{$vo.ocontent}</option>
+                                        {/volist}
+                                    </select></td>
                                 {/if}
                             </tr>{/volist}
-
                         </tbody>
                     </table>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="project-right-sider project-project-sider-header form-control" style="margin-top: 120px;">
+                    <form class="form-box">
+                        <h4>请选择唯一标识字段</h4>
+                        <select class="select" name="primaryKey" id="primaryKey">
+                            {volist name="tableField" id="vo"}
+                            <option value="{$key}">{$vo}</option>
+                            {/volist}
+                        </select>
+                        <div class="useXH hidden">
+                            <h4>是否使用学号对照</h4>
+                            <label>
+                                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="yes" checked>
+                                <span class="b-radio"></span>使用
+                            </label>
 
-                    <!-- <div class="project-second-step">
-                        <div class="form-horizontal">
-                            {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)==0}
-                            <div class="form-inline">
-                                <label for="{$option.ocontent}" class="col-sm-2 control-label">{$option.ocontent}</label>
-                                <input type="text" class="form-control" id="{$option.idInTable}">
-                            </div>
-                            {/if} {/volist} {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)>0}
-                            <div class="form-inline">
-                                <label for="{$option.ocontent}" class="col-sm-2 control-label">{$option.ocontent}</label>
-                                <select class="form-control">
-                                {volist name="option.child" id="vo"}
-                                <option value ="{$option.idInTable}">{$vo.ocontent}</option>
-                                {/volist}
-                                </select>
-                            </div>
-                            {/if} {/volist}
+                            <label>
+                                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="no">
+                                <span class="b-radio"></span>不使用
+                            </label>
                         </div>
-                    </div> -->
+                    </form>
+
+                    <button class="btn project-btn next" type="button"><span class="fa fa-table"></span> 初始化模板</button>
+                </div>
+                <div class="project-right-sider">
+
+                </div>
+                <div class="project-right-sider">
 
                 </div>
             </div>
-
         </div>
-
-        <!-- <footer class="footer project-footer">
-        <div class="container">
-
-        </div>
-    </footer> -->
-
-        <!-- Bootstrap core JavaScript
+    </div>
+    <!-- Bootstrap core JavaScript
     ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="__JS__/jquery.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="__JS__/jquery.min.js"></script>
 
 
-        <script>
-            window.jQuery || document.write('<script src="__JS__/jquery.min.js"><\/script>')
-        </script>
-        <script src="__JS__/jquery.ui.js"></script>
-        <script src="__JS__/bootstrap.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="__JS__/jquery.min.js"><\/script>')
+    </script>
+    <script src="__JS__/jquery.ui.js"></script>
+    <script src="__JS__/bootstrap.min.js"></script>
 
-        <script src="__JS__/bootstrap-datetimepicker.min.js"></script>
-        <script src="__JS__/bootstrap-datetimepicker.zh-CN.js"></script>
+    <script src="__JS__/bootstrap-datetimepicker.min.js"></script>
+    <script src="__JS__/bootstrap-datetimepicker.zh-CN.js"></script>
+    <!--<script src="__JS__/js/docs.min.js"></script>-->
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <!--<script src="__JS__/ie10-viewport-bug-workaround.js"></script>-->
+    <script src="__LIB__/layer/layer.js"></script>
+    <script>
+        $(function () {
+            $("#primaryKey").change(function () {
+                var key = $(this).children('option:selected').val()
+                if (key == "xh" || key == "sfzh") {
+                    $(".useXH").removeClass("hidden").addClass("show")
+                }else{
+                    $(".useXH").removeClass("show").addClass("hidden")
+                }
+            })
 
-        <script type="application/javascript">
-        </script>
-        <!--<script src="__JS__/js/docs.min.js"></script>-->
-        <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <!--<script src="__JS__/ie10-viewport-bug-workaround.js"></script>-->
+            $(".next").click(function () {
+                $.ajax({
+                    method: "post",
+                    url: "{:url('excel/import/createtemplateSecond')}",
+                    data: $("form").serialize(),
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.code == 1) {
+                            layer.msg(
+                                data.msg, {
+                                icon: 6,
+                                time: 2000
+                            }
+                            );
+                        } else {
+                            layer.open({
+                                title: "更新失败！",
+                                content: data.msg,
+                                icon: 5,
+                                anim: 5
+                            });
+                        }
+                    }
+                })
+            })
+        });
+    </script>
 </body>
 
 </html>
