--- a/application/excel/view/import/createTemplateSecond.html
+++ b/application/excel/view/import/createTemplateSecond.html
@@ -1,275 +1,182 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+{extend name="public/base"}
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="__IMG__weixin.jpg">
+{block name="title"}完善模板信息{/block}
+{block name="page-style"}
+<style>
+    .form-inline {
+        margin-top: 10px;
+    }
 
-    <title>完善模板信息</title>
+    .select {
+        display: inline-block;
+        width: auto;
+        height: 40px;
+        position: relative;
+        vertical-align: middle;
+        padding: 0;
+        overflow: hidden;
+        background-color: #fff;
+        color: #555;
+        border: 1px solid #aaa;
+        text-shadow: none;
+        border-radius: 4px;
+        transition: box-shadow 0.25s ease;
+        z-index: 2;
+    }
 
-    <!-- Bootstrap core CSS -->
-    <link href="__CSS__/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
+    .select:hover {
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    }
 
-    <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../static/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
-    <link href="__CSS__/jquery.css" rel="stylesheet">
-    <link href="__CSS__/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    .select:before {
+        content: "";
+        position: absolute;
+        width: 0;
+        height: 0;
+        border: 10px solid transparent;
+        border-top-color: #ccc;
+        top: 14px;
+        right: 10px;
+        cursor: pointer;
+        z-index: -2;
+    }
 
-    <link href="__CSS__/mysite.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--<link href="__CSS__/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
+    .select select {
+        cursor: pointer;
+        padding: 10px;
+        width: 100%;
+        border: none;
+        background: transparent;
+        background-image: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+    }
 
-    <!-- Custom styles for this template -->
-    <!--<link href="theme.css" rel="stylesheet">-->
+    .select select:focus {
+        outline: none;
+    }
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!--<script src="__JS__/ie-emulation-modes-warning.js"></script>-->
+    label {
+        margin: 10px;
+    }
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    .a-radio {
+        display: none;
+    }
 
-    <style>
-        .form-inline {
-            margin-top: 10px;
-        }
+    .b-radio {
+        display: inline-block;
+        border: 1px solid #ccc;
+        width: 16px;
+        height: 16px;
+        border-radius: 2px;
+        vertical-align: middle;
+        margin-right: 5px;
+        position: relative;
+    }
 
-        .select {
-            display: inline-block;
-            width: auto;
-            height: 40px;
-            position: relative;
-            vertical-align: middle;
-            padding: 0;
-            overflow: hidden;
-            background-color: #fff;
-            color: #555;
-            border: 1px solid #aaa;
-            text-shadow: none;
-            border-radius: 4px;
-            transition: box-shadow 0.25s ease;
-            z-index: 2;
-        }
+    .b-radio:before {
+        content: '';
+        font-size: 0;
+        width: 10px;
+        height: 10px;
+        background: rgb(143, 188, 238);
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-left: -5px;
+        margin-top: -5px;
+        border-radius: 2px;
+        display: none;
+    }
 
-        .select:hover {
-            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
-        }
+    .a-radio:checked~.b-radio:before {
+        display: block;
+    }
+</style>
+{/block}
+{block name="page-main"}
 
-        .select:before {
-            content: "";
-            position: absolute;
-            width: 0;
-            height: 0;
-            border: 10px solid transparent;
-            border-top-color: #ccc;
-            top: 14px;
-            right: 10px;
-            cursor: pointer;
-            z-index: -2;
-        }
+<ul class="tablist">
+    <li role="tab" class="disabled first" aria-disabled="true">
+        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 编写方式</a>
+    </li>
+    <li role="tab" class="second current" aria-disabled="false" aria-selected="true">
+        <a id="formWizard-t-1" aria-controls="formWizard-p-1"><span class="current-info audible">current
+                step: </span><span class="number">2</span> 编写方式</a>
+    </li>
+    <li role="tab" class="disabled last" aria-disabled="true">
+        <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
+    </li>
+</ul>
+<div class="form-horizontal">
+    <table class="table">
+        <caption>
+            <h2>{$tname}</h2>
+        </caption>
+        <tbody>
+            {volist name="optionList" id='option'} {if $option.type='p' AND count($option.child)==0}
+            <tr>
+                <td><label for="{$option.content}" class="col-sm-10 control-label">{$option.content}</label></td>
+                <td><input type="text" class="form-control" name="{$option.sid}"></td>
+                {/if}
+            </tr>{/volist}
+            <!-- 输出select -->
+            {volist name="optionList" id='option'} {if $option.type='p' AND count($option.child)>0}
+            <tr>
+                <td><label for="{$option.content}" class="col-sm-10 control-label">{$option.content}</label></td>
+                <td><select class="form-control">
+                        {volist name="option.child" id="vo"}
+                        <option name="{$option.sid}">{$vo.content}</option>
+                        {/volist}
+                    </select></td>
+                {/if}
+            </tr>{/volist}
+        </tbody>
+    </table>
+</div>
+{/block}
+{block name="page-right"}
+<div class="project-right-sider project-project-sider-header form-control" style="margin-top: 120px;">
+    <form class="form-box">
+        <h4>请选择唯一标识字段</h4>
+        <select class="select" name="primaryKey" id="primaryKey">
+            {volist name="tableField" id="vo"}
+            <option value="{$key}">{$vo}</option>
+            {/volist}
+        </select>
+        <div class="useXH hidden">
+            <h4>是否使用学号对照</h4>
+            <label>
+                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="yes" checked>
+                <span class="b-radio"></span>使用
+            </label>
 
-        .select select {
-            cursor: pointer;
-            padding: 10px;
-            width: 100%;
-            border: none;
-            background: transparent;
-            background-image: none;
-            -webkit-appearance: none;
-            -moz-appearance: none;
-        }
-
-        .select select:focus {
-            outline: none;
-        }
-
-        label {
-            margin: 10px;
-        }
-
-        .a-radio {
-            display: none;
-        }
-
-        .b-radio {
-            display: inline-block;
-            border: 1px solid #ccc;
-            width: 16px;
-            height: 16px;
-            border-radius: 2px;
-            vertical-align: middle;
-            margin-right: 5px;
-            position: relative;
-        }
-
-        .b-radio:before {
-            content: '';
-            font-size: 0;
-            width: 10px;
-            height: 10px;
-            background: rgb(143, 188, 238);
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            margin-left: -5px;
-            margin-top: -5px;
-            border-radius: 2px;
-            display: none;
-        }
-
-        .a-radio:checked~.b-radio:before {
-            display: block;
-        }
-    </style>
-</head>
-
-<body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">MySite</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="index.html">首页</a></li>
-                    <li><a href="project.html">项目</a></li>
-                    <li><a href="team.html">团队</a></li>
-                    <li><a href="blog.html">博客</a></li>
-                    <li><a href="answer.html">问答</a></li>
-                </ul>
-                <ul class="nav navbar-nav  navbar-right">
-                    <li><a href="login.html">登录</a></li>
-                    <li><a href="register.html">注册</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
+            <label>
+                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="no">
+                <span class="b-radio"></span>不使用
+            </label>
         </div>
-    </nav>
-    <div class="container project-team-container">
-        <div class="row">
-            <div class="col-lg-9">
-                <ul class="tablist">
-                    <li role="tab" class="disabled first" aria-disabled="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="number">1</span> 编写方式</a>
-                    </li>
-                    <li role="tab" class="second current" aria-disabled="false" aria-selected="true">
-                        <a id="formWizard-t-0" aria-controls="formWizard-p-0"><span class="current-info audible">current
-                                step: </span><span class="number">2</span> 编写方式</a>
-                    </li>
-                    <li role="tab" class="disabled last" aria-disabled="true">
-                        <a id="formWizard-t-2" aria-controls="formWizard-p-2"><span class="number">3</span>完成发布</a>
-                    </li>
-                </ul>
-                <div class="form-horizontal">
-                    <table class="table">
-                        <caption>
-                            <h2>{$tname}</h2>
-                        </caption>
-                        <tbody>
-                            {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)==0}
-                            <tr>
-                                <td><label for="{$option.ocontent}"
-                                        class="col-sm-10 control-label">{$option.ocontent}</label></td>
-                                <td><input type="text" class="form-control" name="{$option.idInTable}"></td>
-                                {/if}
-                            </tr>{/volist}
-                            <!-- 输出select -->
-                            {volist name="optionList" id='option'} {if $option.otype='p' AND count($option.child)>0}
-                            <tr>
-                                <td><label for="{$option.ocontent}"
-                                        class="col-sm-10 control-label">{$option.ocontent}</label></td>
-                                <td><select class="form-control">
-                                        {volist name="option.child" id="vo"}
-                                        <option name="{$option.idInTable}">{$vo.ocontent}</option>
-                                        {/volist}
-                                    </select></td>
-                                {/if}
-                            </tr>{/volist}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="project-right-sider project-project-sider-header form-control" style="margin-top: 120px;">
-                    <form class="form-box">
-                        <h4>请选择唯一标识字段</h4>
-                        <select class="select" name="primaryKey" id="primaryKey">
-                            {volist name="tableField" id="vo"}
-                            <option value="{$key}">{$vo}</option>
-                            {/volist}
-                        </select>
-                        <div class="useXH hidden">
-                            <h4>是否使用学号对照</h4>
-                            <label>
-                                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="yes" checked>
-                                <span class="b-radio"></span>使用
-                            </label>
+    </form>
+    <button class="btn project-btn init" type="button"><span class="fa fa-table"></span> 初始化模板</button>
+    <a href="{:url('excel/Import/createTemplateThird')}"><button class="btn project-btn next" type="button">下一步</button></a>
+</div>
 
-                            <label>
-                                <input type="radio" name="ifUseXH" id="ifUseXH" class="a-radio" value="no">
-                                <span class="b-radio"></span>不使用
-                            </label>
-                        </div>
-                    </form>
-
-                    <button class="btn project-btn next" type="button"><span class="fa fa-table"></span> 初始化模板</button>
-                </div>
-                <div class="project-right-sider">
-
-                </div>
-                <div class="project-right-sider">
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="__JS__/jquery.min.js"></script>
-
-
+    {/block}
+    {block name="page-js"} 
     <script>
-        window.jQuery || document.write('<script src="__JS__/jquery.min.js"><\/script>')
-    </script>
-    <script src="__JS__/jquery.ui.js"></script>
-    <script src="__JS__/bootstrap.min.js"></script>
 
-    <script src="__JS__/bootstrap-datetimepicker.min.js"></script>
-    <script src="__JS__/bootstrap-datetimepicker.zh-CN.js"></script>
-    <!--<script src="__JS__/js/docs.min.js"></script>-->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--<script src="__JS__/ie10-viewport-bug-workaround.js"></script>-->
-    <script src="__LIB__/layer/layer.js"></script>
-    <script>
         $(function () {
             $("#primaryKey").change(function () {
-                var key = $(this).children('option:selected').val()
-                if (key == "xh" || key == "sfzh") {
+                var key = $(this).children('option:selected').text()
+                if (key == "学号") {
                     $(".useXH").removeClass("hidden").addClass("show")
-                }else{
+                } else {
                     $(".useXH").removeClass("show").addClass("hidden")
                 }
             })
 
-            $(".next").click(function () {
+            $(".init").click(function () {
                 $.ajax({
                     method: "post",
                     url: "{:url('excel/import/createtemplateSecond')}",
@@ -296,6 +203,4 @@
             })
         });
     </script>
-</body>
-
-</html>
+    {/block}
