--- a/application/excel/view/template/index.html
+++ b/application/excel/view/template/index.html
@@ -1,22 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+{extend name="public/base"}
 
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+{block name="title"}{$tname}{/block}
 
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-
-<body>
-    <div style="width: 80%;height: auto;">
-        <form id="input-excel" method="post" action="{:url('excel/Import/upload')}" enctype="multipart/form-data">
+                {block name="page-main"}
             <div class="form-horizontal row">
                 <!-- 输出input -->
                 {volist name="optionList" id='option'} {if $option.type='p' AND count($option.child)==0}
@@ -38,8 +24,4 @@
                 </div>
                 {/if} {/volist}
             </div>
-        </form>
-    </div>
-</body>
-
-</html>
+{/block}
