--- a/application/excel/view/public/base.html
+++ b/application/excel/view/public/base.html
@@ -17,7 +17,7 @@
     <!-- Bootstrap theme -->
 
     <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="../static/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="__CSS__/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="__CSS__/jquery.css" rel="stylesheet">
     <link href="__CSS__/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
