--- a/application/excel/view/public/base.html
+++ b/application/excel/view/public/base.html
@@ -22,15 +22,8 @@
     <link href="__CSS__/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
     <link href="__CSS__/mysite.css" rel="stylesheet">
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--<link href="__CSS__/ie10-viewport-bug-workaround.css" rel="stylesheet">-->
 
-    <!-- Custom styles for this template -->
-    <!--<link href="theme.css" rel="stylesheet">-->
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!--<script src="__JS__/ie-emulation-modes-warning.js"></script>-->
+    <link href="__CSS__/taginput.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
