--- a/application/admin/view/public/base.html
+++ b/application/admin/view/public/base.html
@@ -17,13 +17,11 @@
     <!-- Bootstrap theme -->
 
     <link href="__CSS__/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="__CSS__/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="__CSS__/font-awesome.min.css" rel="stylesheet">
     <link href="__CSS__/jquery.css" rel="stylesheet">
     <link href="__CSS__/bootstrap-datetimepicker.min.css" rel="stylesheet">
 
     <link href="__CSS__/mysite.css" rel="stylesheet">
-
-    <link href="__CSS__/taginput.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -121,9 +119,6 @@
         }
     </script>
 
-    <!--<script src="__JS__/js/docs.min.js"></script>-->
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--<script src="__JS__/ie10-viewport-bug-workaround.js"></script>-->
     {block name="page-js"}
 
     {/block}
